@@ -1,6 +1,7 @@
 3.3.9 - 30/12/2018
 Updated:
 - Readme file and added example text file
+- Checklist error message
 Added:
 - Support elilo and grub upgrade boot loader after kernel upgrade
 
